[package]
name = "butterflyrs"
description = "An experiment in 6502 system emulation"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
exclude = [".github/*", ".idea/*"]
authors = ["Drew Walton"]
repository = "https://github.com/drewwalton19216801/butterflyrs"

[dependencies]
bitflags = "2.5.0"